err/plow-blueprint.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blueprint'...
Compiling './lib/python3.5/site-packages/blueprint/app.py'...
***   File "./lib/python3.5/site-packages/blueprint/app.py", line 40
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueprint/archive.py'...
***   File "./lib/python3.5/site-packages/blueprint/archive.py", line 30
    os.makedirs(self.__path, 0777)
                                ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/blueprint/backend'...
Compiling './lib/python3.5/site-packages/blueprint/conf.py'...
***   File "./lib/python3.5/site-packages/blueprint/conf.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/blueprint/layer.py'...
***   File "./lib/python3.5/site-packages/blueprint/layer.py", line 301
    print "idx :%d" % idx
                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/blueprint/modules'...
Compiling './lib/python3.5/site-packages/blueprint/modules/iconvert.py'...
***   File "./lib/python3.5/site-packages/blueprint/modules/iconvert.py", line 38
    print cmd
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/blueprint/plugins'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/plow_blueprint-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test_layer.py'...
***   File "./lib/python3.5/site-packages/tests/test_layer.py", line 123
    print frameset
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
